--- a/style.css
+++ b/style.css
@@ -70,10 +70,13 @@ body{
     position: absolute;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
+    background-color: rgba(244,	155,	198, 0.2);
+border: 4px solid var(--card-back-color);
 }
 
 
